; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/packet/extr_af_packet.c_run_filter.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/packet/extr_af_packet.c_run_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.sock = type { i32 }
%struct.sk_filter = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.sock*, i32)* @run_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @run_filter(%struct.sk_buff* %0, %struct.sock* %1, i32 %2) #0 {
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.sock*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.sk_filter*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %4, align 8
  store %struct.sock* %1, %struct.sock** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = call i32 (...) @rcu_read_lock_bh()
  %9 = load %struct.sock*, %struct.sock** %5, align 8
  %10 = getelementptr inbounds %struct.sock, %struct.sock* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call %struct.sk_filter* @rcu_dereference(i32 %11)
  store %struct.sk_filter* %12, %struct.sk_filter** %7, align 8
  %13 = load %struct.sk_filter*, %struct.sk_filter** %7, align 8
  %14 = icmp ne %struct.sk_filter* %13, null
  br i1 %14, label %15, label %24

15:                                               ; preds = %3
  %16 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %17 = load %struct.sk_filter*, %struct.sk_filter** %7, align 8
  %18 = getelementptr inbounds %struct.sk_filter, %struct.sk_filter* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.sk_filter*, %struct.sk_filter** %7, align 8
  %21 = getelementptr inbounds %struct.sk_filter, %struct.sk_filter* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @sk_run_filter(%struct.sk_buff* %16, i32 %19, i32 %22)
  store i32 %23, i32* %6, align 4
  br label %24

24:                                               ; preds = %15, %3
  %25 = call i32 (...) @rcu_read_unlock_bh()
  %26 = load i32, i32* %6, align 4
  ret i32 %26
}

declare dso_local i32 @rcu_read_lock_bh(...) #1

declare dso_local %struct.sk_filter* @rcu_dereference(i32) #1

declare dso_local i32 @sk_run_filter(%struct.sk_buff*, i32, i32) #1

declare dso_local i32 @rcu_read_unlock_bh(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
